inou/prp/tests/errors/adv_nil_operation.prp
/*
:name: adv_nil_operation
:type: error
:error: (nil|illegal)
*/
// 2f-nil_diag — an arithmetic op that folds to nil (here a nil/uninitialized
// operand) is an illegal operation and must be reported, not silently folded.
const a = nil
const y = a + 1   // locate_error_here
cputs("y")
